# lamp-the-djinn

./: .editorconfig  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  Makefile  PROJECT.md  README.md  ROADMAP.md  TODO.md  audit.md  claude-code.sh  docker-compose.yml  docker-security-research.md  e2e-attestation.json  putitoutthere.toml  pyproject.toml  pytest.ini  session-summary.md  testing-conventions.toml  writing-style-guide.md
.claude/: settings.local.json
.devcontainer/: .hadolint.yaml  Dockerfile  add-domain-to-firewall.sh  devcontainer.json  init-firewall.sh  safe-rm  ssh_config  whitelisted-domains.txt
.githooks/: pre-commit
.github/workflows/: conventions.yml  docker-publish.yml  lint.yml  pr-monitor.yml  release.yml  test-cli.yml  test-container.yml  update-base-image-digest.yml
blog/: building-clanker.md
config/: settings.json
deploy/: README.md  lamp-the-djinn-harness-cache.service  lamp-the-djinn-harness-cache.timer  setup-kata-runtime.sh
deprecated/session-notes/: 2025-12-11-ssh-test-fix.md
fly/: README.md  entrypoint.sh  fly.toml
grafana/: README.md  docker-compose.yml  otel-collector-config.yaml  prometheus.yml  start.sh  stop.sh
grafana/dashboards/: claude-code-metrics.json
grafana/provisioning/dashboards/: dashboards.yml
hooks/: load-context.sh  webfetch-fallback.sh
internals/python/: testing.md
litellm/: config.yaml
plans/: dockerfile-optimization.md
scripts/: approve-domain.sh  claude-code.sh  refresh-harness-cache.sh  run-tests.sh  save-context.sh  test-container.sh  test-playwright-fallback.sh
skills/: README.md  web.ts
src/clanker/: __init__.py  cli.py
src/clanker/devcontainer/: Dockerfile  devcontainer.json
src/clankercage/: cli.py
src/clankercage/devcontainer/: Dockerfile  devcontainer.json  whitelisted-domains.txt
src/lamp_the_djinn/: __init__.py  cli.py  cli_test.py  harness.py  harness_test.py
src/lamp_the_djinn/devcontainer/: Dockerfile  add-domain-to-firewall.sh  devcontainer.json  init-firewall.sh  setup-gpg.sh  whitelisted-domains.txt
tests/: 01-directory-structure.sh  02-global-instructions.sh  03-mount-verification.sh  04-save-workflow.sh  05-persistence.sh  06-host-container-sync.sh  07-folder-detection.sh  conftest.py  test_cli.py  test_command_test.py  test_config_test.py  test_container.py  test_firewall.py  test_gpg_signing.py  test_isolation_test.py  test_playwright_fallback.py  test_safe_rm.py
tests/e2e/: agent_matrix_test.py  coding_agent_test.py  container_test.py  firewall_test.py  gpg_signing_test.py  mount_permissions_test.py  playwright_test.py  safe_rm_test.py  workspace_test.py
tests/integration/: container_info_test.py  harness_cache_test.py  runtime_test.py
