[project]
name = "lamp-the-djinn"
version = "0.1.0"
description = "A sandboxed Claude Code devcontainer runner"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "thekevinbot", email = "thekevinbot@users.noreply.github.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/thekevinbot/lamp-the-djinn"
Repository = "https://github.com/thekevinbot/lamp-the-djinn"

[project.scripts]
lamp-the-djinn = "lamp_the_djinn.cli:main"
ltd = "lamp_the_djinn.cli:main"
lamp-the-djinn-remote = "lamp_the_djinn.cli:shell_remote"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-describe>=2.2.0",
    "pytest-watcher>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_* describe_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lamp_the_djinn"]
artifacts = ["src/lamp_the_djinn/devcontainer/*"]

[tool.hatch.build.targets.sdist]
include = [
    "src/lamp_the_djinn/**/*",
]
